force-app/main/default/objects/Lead/fields/Actividad_oculta__c.field-meta.xml
<CustomField>
    <fullName>Actividad_oculta__c</fullName>
    <description>Campo oculto que sirve para pasar la actividad del candidato a la cuenta. Se usa en reglas de actualización a nivel de cuenta</description>
    <formula>TEXT( Actividad__c )</formula>
    <label>Actividad oculta</label>
    <type>Text</type>
</CustomField>