force-app/main/default/objects/Lead/fields/Apellidos_representante_legal__c.field-meta.xml
<CustomField>
    <fullName>Apellidos_representante_legal__c</fullName>
    <description>Este campo se usa para los leads que vienen del formulario de cambio de titular.</description>
    <label>Apellidos representante legal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>