force-app/main/default/objects/Lead/fields/Asignado_a_comercial__c.field-meta.xml
<CustomField>
    <fullName>Asignado_a_comercial__c</fullName>
    <formula>IF( OwnerId &lt;&gt; &apos;005D0000002E7hL&apos;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asignado a comercial</label>
    <type>Checkbox</type>
</CustomField>