force-app/main/default/objects/Lead/fields/C_mo_nos_ha_conocido__c.field-meta.xml
<CustomField>
    <fullName>C_mo_nos_ha_conocido__c</fullName>
    <label>¿Cómo nos ha conocido?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Busqué en Google</fullName>
            </value>
            <value>
                <fullName>Eventos</fullName>
                <isActive>false</isActive>
                <label>Eventos</label>
            </value>
            <value>
                <fullName>Noticia en prensa online/offline</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
                <isActive>false</isActive>
                <label>Online</label>
            </value>
            <value>
                <fullName>Otros</fullName>
                <isActive>false</isActive>
                <label>Otros</label>
            </value>
            <value>
                <fullName>Por el instalador de la zona</fullName>
            </value>
            <value>
                <fullName>Por un amigo/vecino/familiar</fullName>
            </value>
            <value>
                <fullName>Prensa</fullName>
                <isActive>false</isActive>
                <label>Prensa</label>
            </value>
            <value>
                <fullName>Publicidad en prensa online/offline</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
                <isActive>false</isActive>
                <label>Radio</label>
            </value>
            <value>
                <fullName>Recomendación</fullName>
            </value>
            <value>
                <fullName>Redes sociales (Facebook, LinkedIn, Twitter, YouTube)</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
                <isActive>false</isActive>
                <label>TV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>