force-app/main/default/objects/Lead/fields/Call_center__c.field-meta.xml
<CustomField>
    <fullName>Call_center__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para los candidatos gestionados por telper, se usa para informes</description>
    <inlineHelpText>Candidato gestionado por telper</inlineHelpText>
    <label>Call center</label>
    <type>Checkbox</type>
</CustomField>