force-app/main/default/objects/Lead/fields/Capacidad__c.field-meta.xml
<CustomField>
    <fullName>Capacidad__c</fullName>
    <description>Número en litros</description>
    <inlineHelpText>Número en litros</inlineHelpText>
    <label>Capacidad depósito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>