force-app/main/default/objects/Lead/fields/Cargo_del__c.field-meta.xml
<CustomField>
    <fullName>Cargo_del__c</fullName>
    <label>Cargo representante</label>
    <length>20</length>
    <type>Text</type>
</CustomField>