force-app/main/default/objects/Lead/fields/Consentimiento_HS__c.field-meta.xml
<CustomField>
    <fullName>Consentimiento_HS__c</fullName>
    <description>Base legal a partir de la cual se ha obtenido el consentimiento del contacto.</description>
    <label>Consentimiento HS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freely given consent from contact</fullName>
            </value>
            <value>
                <fullName>Legitimate interest – prospect/lead</fullName>
            </value>
            <value>
                <fullName>Legitimate interest – existing customer</fullName>
            </value>
            <value>
                <fullName>Legitimate interest - other</fullName>
            </value>
            <value>
                <fullName>Performance of a contract</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>