force-app/main/default/objects/Lead/fields/Consumo_energia_1a_estimacion__c.field-meta.xml
<CustomField>
    <fullName>Consumo_energia_1a_estimacion__c</fullName>
    <label>Consumo energía 1a estimación</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>