force-app/main/default/objects/Lead/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <label>Calle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>