force-app/main/default/objects/Lead/fields/Contactado__c.field-meta.xml
<CustomField>
    <fullName>Contactado__c</fullName>
    <formula>IF(ISBLANK( LastActivityDate ),&apos;No&apos;,&apos;Sí&apos;)</formula>
    <label>Contactado</label>
    <type>Text</type>
</CustomField>