force-app/main/default/objects/Lead/fields/contato_alt1__c.field-meta.xml
<CustomField>
    <fullName>contato_alt1__c</fullName>
    <label>Contacto alternativo 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>