force-app/main/default/objects/Lead/fields/Convertido__c.field-meta.xml
<CustomField>
    <fullName>Convertido__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Este campo se utiliza para indicar que una cuenta se ha creado por la conversión de un candidato. Siempre se encuentra activo, por lo que al hacer el mapeo con la cuenta en la conversión, se copiará este valor al campo equivalente de Cuenta. (Necesario para el workflow que asigna la cuenta a un usuario dependiendo de la provincia o del código postal.)</description>
    <label>Convertido</label>
    <type>Checkbox</type>
</CustomField>