force-app/main/default/objects/Lead/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <description>Campo creado para poder hacer el mapeo en la conversión de candidato a oportunidad (por defecto el campo estándar Descrption va a la cuenta).</description>
    <label>Descripción</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>