force-app/main/default/objects/Lead/fields/Digital_Q216__c.field-meta.xml
<CustomField>
    <fullName>Digital_Q216__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Q216</label>
    <type>Checkbox</type>
</CustomField>