force-app/main/default/objects/Lead/fields/Direcci_n_de_suministro1__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n_de_suministro1__c</fullName>
    <description>Este campo se usa para los leads que vienen del formulario de cambio de titualar.</description>
    <label>Dirección de suministro1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>