force-app/main/default/objects/Lead/fields/Direcci_n_de_suministro2__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n_de_suministro2__c</fullName>
    <description>Este campo se usa para los leads que vienen del formulario de cambio de titular.</description>
    <label>Dirección de suministro2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>