force-app/main/default/objects/Lead/fields/DNI_particular__c.field-meta.xml
<CustomField>
    <fullName>DNI_particular__c</fullName>
    <description>Este campo se usa para los leads que vienen del formulario de cambio de titualar.</description>
    <label>DNI particular</label>
    <length>15</length>
    <type>Text</type>
</CustomField>