force-app/main/default/objects/Lead/fields/DNI_respentante_legal__c.field-meta.xml
<CustomField>
    <fullName>DNI_respentante_legal__c</fullName>
    <description>Este campo se usa para los leads que vienen del formulario de cambio de titular.</description>
    <label>DNI respentante legal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>