force-app/main/default/objects/Lead/fields/Fecha_Actividad_Asignacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Actividad_Asignacion__c</fullName>
    <description>Fecha de la primera actividad completada una vez que el candidato a sido asignado a un Comercial</description>
    <label>Fecha Actividad Asignación</label>
    <type>Date</type>
</CustomField>