force-app/main/default/objects/Lead/fields/Fecha_Asignado_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Asignado_Comercial__c</fullName>
    <label>Fecha Asignado Comercial</label>
    <type>DateTime</type>
</CustomField>