force-app/main/default/objects/Lead/fields/Fecha_deteccion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_deteccion__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Fecha detección</label>
    <type>Date</type>
</CustomField>