force-app/main/default/objects/Lead/fields/Fecha_entrada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_entrada__c</fullName>
    <description>Este campo se usa para los leads que vienen del formulario de cambio de titular.</description>
    <label>Fecha entrada</label>
    <type>Date</type>
</CustomField>