force-app/main/default/objects/Lead/fields/Fecha_fin_contrato__c.field-meta.xml
<CustomField>
    <fullName>Fecha_fin_contrato__c</fullName>
    <inlineHelpText>Solo para contratos en vigor</inlineHelpText>
    <label>Fecha fin contrato</label>
    <type>Date</type>
</CustomField>