force-app/main/default/objects/Lead/fields/Google_Click_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Click_Id__c</fullName>
    <description>Campo utilizado para seguimiento campañas Sherpa.</description>
    <label>Google Click Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>