force-app/main/default/objects/Lead/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <formula>Individual.Hash_encoded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hash</label>
    <type>Text</type>
</CustomField>