force-app/main/default/objects/Lead/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <description>Este campo se usa para los leads que vienen del formulario de cambio de titualar.</description>
    <label>IBAN</label>
    <length>24</length>
    <type>Text</type>
</CustomField>