force-app/main/default/objects/Lead/fields/Lectura_real_contador__c.field-meta.xml
<CustomField>
    <fullName>Lectura_real_contador__c</fullName>
    <label>Lectura real contador</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>