force-app/main/default/objects/Lead/fields/Motivo_de_Descarte__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Descarte__c</fullName>
    <label>Motivo de Perdida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Me quedo con mi energía actual (precio)</fullName>
            </value>
            <value>
                <fullName>Compromiso permanencia competencia</fullName>
            </value>
            <value>
                <fullName>Me lo estoy pensando</fullName>
            </value>
            <value>
                <fullName>No contesta</fullName>
            </value>
            <value>
                <fullName>No dispuesto a realizar inversión inicial</fullName>
            </value>
            <value>
                <fullName>Elijo la competencia (precios)</fullName>
            </value>
            <value>
                <fullName>Poco volumen</fullName>
            </value>
            <value>
                <fullName>Causas técnico-legales</fullName>
            </value>
            <value>
                <fullName>No receptivo al cambio (negativo)</fullName>
            </value>
            <value>
                <fullName>Red de gas natural</fullName>
            </value>
            <value>
                <fullName>Canalizado GLP</fullName>
            </value>
            <value>
                <fullName>Fuera zona Primagas</fullName>
            </value>
            <value>
                <fullName>Otra energía: gasóleo</fullName>
            </value>
            <value>
                <fullName>Otra energía: electricidad</fullName>
            </value>
            <value>
                <fullName>Otra energía: biomasa</fullName>
            </value>
            <value>
                <fullName>Otra energía: renovables</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>