force-app/main/default/objects/Lead/fields/N_mero_cliente_anterior__c.field-meta.xml
<CustomField>
    <fullName>N_mero_cliente_anterior__c</fullName>
    <description>Número cliente anterior</description>
    <label>Número cliente anterior</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>