force-app/main/default/objects/Lead/fields/Nombre_representante_legal__c.field-meta.xml
<CustomField>
    <fullName>Nombre_representante_legal__c</fullName>
    <label>Nombre representante legal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>