force-app/main/default/objects/Lead/fields/Observaciones_Descarte__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Descarte__c</fullName>
    <label>Observaciones</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>