force-app/main/default/objects/Lead/fields/Origen_del_prospecto__c.field-meta.xml
<CustomField>
    <fullName>Origen_del_prospecto__c</fullName>
    <label>Origen del prospecto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Instalador</fullName>
            </value>
            <value>
                <fullName>Llamada entrante</fullName>
            </value>
            <value>
                <fullName>Online Primagas</fullName>
            </value>
            <value>
                <fullName>Prescriptor</fullName>
            </value>
            <value>
                <fullName>Prospección directa</fullName>
            </value>
            <value>
                <fullName>Teleprospección</fullName>
            </value>
            <value>
                <fullName>Prescriptor Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>