force-app/main/default/objects/Lead/fields/PaisContacto__c.field-meta.xml
<CustomField>
    <fullName>PaisContacto__c</fullName>
    <defaultValue>&quot;España&quot;</defaultValue>
    <label>País</label>
    <length>100</length>
    <type>Text</type>
</CustomField>