force-app/main/default/objects/Lead/fields/Partner_de_candidato__c.field-meta.xml
<CustomField>
    <fullName>Partner_de_candidato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo oculto para relacionar con partner de candidato mediante process builder</description>
    <label>Partner de candidato</label>
    <referenceTo>Socio_de_candidato__c</referenceTo>
    <relationshipLabel>Candidatos</relationshipLabel>
    <relationshipName>Candidatos</relationshipName>
    <type>Lookup</type>
</CustomField>