force-app/main/default/objects/Lead/fields/Poblaci_n_entrega__c.field-meta.xml
<CustomField>
    <fullName>Poblaci_n_entrega__c</fullName>
    <description>Este campo se usa para los leads que vienen del formulario de cambio de titular.</description>
    <label>Población suministro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>