force-app/main/default/objects/Lead/fields/Prescriptor__c.field-meta.xml
<CustomField>
    <fullName>Prescriptor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Este campo se dejará de utilizar ya que se sustituirá por la lista relacionada de  socios de candidato</description>
    <label>Prescriptor</label>
    <referenceTo>Proveedor__c</referenceTo>
    <relationshipLabel>Candidatos</relationshipLabel>
    <relationshipName>Candidatos</relationshipName>
    <type>Lookup</type>
</CustomField>