force-app/main/default/objects/Lead/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Candidatos</relationshipLabel>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>