force-app/main/default/objects/Lead/fields/Provincia__c.field-meta.xml
<CustomField>
    <fullName>Provincia__c</fullName>
    <description>Este campo se usa para los leads que vienen del formulario de cambio de titular.</description>
    <label>Provincia suministro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>