force-app/main/default/objects/Lead/fields/recordval__rv2AddressStatusCode__c.field-meta.xml
<CustomField>
    <fullName>recordval__rv2AddressStatusCode__c</fullName>
    <label>RV Address Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>