force-app/main/default/objects/Lead/fields/recordval__rv2EmailStatusCode__c.field-meta.xml
<CustomField>
    <fullName>recordval__rv2EmailStatusCode__c</fullName>
    <label>RV Email Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>