force-app/main/default/objects/Lead/fields/recordval__rv2FaxStatusCode__c.field-meta.xml
<CustomField>
    <fullName>recordval__rv2FaxStatusCode__c</fullName>
    <label>RV Fax Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>