force-app/main/default/objects/Lead/fields/recordval__rv2MobilePhoneStatusCode__c.field-meta.xml
<CustomField>
    <fullName>recordval__rv2MobilePhoneStatusCode__c</fullName>
    <label>RV Mobile Phone Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>