force-app/main/default/objects/Lead/fields/recordval__rv2Validation__c.field-meta.xml
<CustomField>
    <fullName>recordval__rv2Validation__c</fullName>
    <label>RV Validation Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>