force-app/main/default/objects/Lead/fields/Spot__c.field-meta.xml
<CustomField>
    <fullName>Spot__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tanques propios o spot</inlineHelpText>
    <label>Cliente propietario del tanque</label>
    <type>Checkbox</type>
</CustomField>