force-app/main/default/objects/Lead/fields/Tel_fono_contacto_alt_1__c.field-meta.xml
<CustomField>
    <fullName>Tel_fono_contacto_alt_1__c</fullName>
    <label>Teléfono contacto alt. 1</label>
    <type>Phone</type>
</CustomField>