force-app/main/default/objects/Lead/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <formula>IF( AND(RecordTypeId = &apos;012D0000000BOF3&apos;,   Company = &apos;&apos; ), &apos;Cliente Particular&apos;,
  IF( AND(RecordTypeId = &apos;012D0000000BOF3&apos;,  Company &lt;&gt; &apos;&apos; ), &apos;Cliente Empresa&apos;,
    IF( RecordTypeId = &apos;012D0000000BOF8&apos;, &apos;Colaborador&apos;, &apos;-&apos; 
       )))</formula>
    <label>Tipo</label>
    <type>Text</type>
</CustomField>