force-app/main/default/objects/Lead/fields/Tipo_cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_cliente__c</fullName>
    <description>Este campo se usa para los leads que vienen del formulario de cambio de titular.</description>
    <label>Tipo cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Propietario</fullName>
            </value>
            <value>
                <fullName>Inquilino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>