force-app/main/default/objects/Lead/fields/Unidad_consumo_energ_a_1a_estimaci_n__c.field-meta.xml
<CustomField>
    <fullName>Unidad_consumo_energ_a_1a_estimaci_n__c</fullName>
    <inlineHelpText>Unidad del campo de consumo energía</inlineHelpText>
    <label>Unidad consumo energía 1a estimación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>€</fullName>
            </value>
            <value>
                <fullName>Litros</fullName>
            </value>
            <value>
                <fullName>Kilos</fullName>
            </value>
            <value>
                <fullName>MWh/año</fullName>
            </value>
            <value>
                <fullName>Botellas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>