force-app/main/default/objects/Lead/fields/Uso__c.field-meta.xml
<CustomField>
    <fullName>Uso__c</fullName>
    <label>Uso</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Actividad__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agua caliente sanitaria</fullName>
            </value>
            <value>
                <fullName>Autogas</fullName>
            </value>
            <value>
                <fullName>Calefacción</fullName>
            </value>
            <value>
                <fullName>Calefacción aves</fullName>
            </value>
            <value>
                <fullName>Climatización invernaderos</fullName>
            </value>
            <value>
                <fullName>Cocción</fullName>
            </value>
            <value>
                <fullName>Cocina</fullName>
            </value>
            <value>
                <fullName>Fundición</fullName>
            </value>
            <value>
                <fullName>Generación de vapor</fullName>
            </value>
            <value>
                <fullName>Generadores</fullName>
            </value>
            <value>
                <fullName>Lavanderia</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Procesos Industriales</fullName>
            </value>
            <value>
                <fullName>Producción alimentaria secado/cocción</fullName>
            </value>
            <value>
                <fullName>Quema de rastrojos</fullName>
            </value>
            <value>
                <fullName>Secado</fullName>
            </value>
            <value>
                <fullName>Secado cereal</fullName>
            </value>
            <value>
                <fullName>Soldadura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>