force-app/main/default/objects/Lead/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <description>Campo utilizado para seguimiento campañas Sherpa.</description>
    <label>utm_medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>